Makefile setup for python tests,docs, and styling

--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "bracketSpacing": true,
     "jsxBracketSameLine": false,
     "arrowParens": "always"
+  },
+  "devDependencies": {
+    "prettier": "^2.2.1"
   }
 }
