model_repo jupyter notebook, script search result legibility improvement, and quality runs

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+*.rst
 
 # Created by https://www.toptal.com/developers/gitignore/api/windows,macos,linux,python,react,pycharm,emacs,vim,visualstudio,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,linux,python,react,pycharm,emacs,vim,visualstudio,visualstudiocode
