--- a/setup.cfg
+++ b/setup.cfg
@@ -4,8 +4,8 @@ default_section = FIRSTPARTY
 ensure_newline_before_comments = True
 force_grid_wrap = 0
 include_trailing_comma = True
-known_first_party = sparsezoo
-known_third_party = requests,yaml,tqdm,numpy,onnx
+known_first_party = sparsezoo,tests
+known_third_party = requests,yaml,tqdm,numpy,onnx,pytest
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 
 line_length = 88
