--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-*.rst
+/docs/source/api/*.rst
 
 # Created by https://www.toptal.com/developers/gitignore/api/windows,macos,linux,python,react,pycharm,emacs,vim,visualstudio,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,linux,python,react,pycharm,emacs,vim,visualstudio,visualstudiocode
