--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ ensure_newline_before_comments = True
 force_grid_wrap = 0
 include_trailing_comma = True
 known_first_party = sparsezoo,tests
-known_third_party = requests,yaml,tqdm,numpy,onnx,pytest
+known_third_party = bs4,requests,yaml,tqdm,numpy,onnx,pytest
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 
 line_length = 88
