--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "lint": "yarn prettier --write src/ui",
     "start": "REACT_APP_SPARSEZOO_API_URL=$SPARSEZOO_API_URL react-scripts start",
-    "build": "REACT_APP_SPARSEZOO_API_URL=$SPARSEZOO_API_URL && react-scripts build"
+    "build": "NODE_ENV=production REACT_APP_SPARSEZOO_API_URL=$SPARSEZOO_API_URL && react-scripts build"
   },
   "eslintConfig": {
     "extends": [
