--- a/.github/workflows/merge-test.yaml
+++ b/.github/workflows/merge-test.yaml
@@ -6,7 +6,7 @@ on:
       - 'release/*'
 
 jobs:
-  base-tests:
+  python-tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -14,7 +14,7 @@ jobs:
         run: pip3 install .[dev]
       - name: "🔬 Running tests"
         run: make test
-  extensive-tests:
+  extensive-python-tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
