--- a/.github/workflows/pull-request-test.yaml
+++ b/.github/workflows/pull-request-test.yaml
@@ -5,20 +5,20 @@ jobs:
   diff-check:
     runs-on: ubuntu-latest
     outputs:
-      diff: ${{ steps.diff-check.outputs.output }}
+      python-diff: ${{ steps.python-check.outputs.output }}
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: "Checking if sparsezoo was changed"
-        id: diff-check
+      - name: "Checking if sparsezoo python code was changed"
+        id: python-check
         run: >
           (git diff --name-only origin/main HEAD | grep -E "[src|tests]/sparsezoo|setup.py")
           && echo "::set-output name=output::1" || echo "::set-output name=output::0"
-  tests:
+  python-tests:
     runs-on: ubuntu-latest
     needs: diff-check
-    if: ${{needs.diff-check.outputs.diff == 1}}
+    if: ${{needs.diff-check.outputs.python-diff == 1}}
     steps:
       - uses: actions/checkout@v2
       - name: "⚙️ Install dependencies"
