Added staging api as the default api for pr

--- a/.github/workflows/pull-request-test.yaml
+++ b/.github/workflows/pull-request-test.yaml
@@ -25,3 +25,5 @@ jobs:
         run: pip3 install .[dev]
       - name: "🔬 Running tests"
         run: make test
+        env:
+          SPARSEZOO_API_URL: https://staging-api.neuralmagic.com
