Updated job depedency

--- a/.github/workflows/test-check.yaml
+++ b/.github/workflows/test-check.yaml
@@ -44,6 +44,7 @@ jobs:
           SPARSEZOO_API_URL: https://staging-api.neuralmagic.com
   extensive-python-tests:
     runs-on: ubuntu-latest
+    needs: test-setup
     if: ${{needs.test-setup.outputs.full-check == 1}}
     steps:
       - uses: actions/checkout@v2
