Env var name change, update readme, test fix on one machine

--- a/.gitignore
+++ b/.gitignore
@@ -763,3 +763,15 @@ MigrationBackup/
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,python,react,pycharm,emacs,vim,visualstudio,visualstudiocode
 .idea/
+
+# vscode debugger 
+.vscode
+
+# personal text files
+**[Oo]utput*
+
+# ignore all files with name name scratch
+**/[Ss]cratch*
+
+# ignore all files with name name script
+**/[Ss]cript*
