Env var name change, update readme, test fix on one machine (#125)
* Env var name change, update readme, test fix on one machine

* Update .gitignore

Co-authored-by: Rahul Tuli <rahul@neuralmagic.com>

* Update README.md

Co-authored-by: Rahul Tuli <rahul@neuralmagic.com>

* Update tests/sparsezoo/helpers.py

Co-authored-by: Rahul Tuli <rahul@neuralmagic.com>

* Update tests/sparsezoo/models/classification/test_efficientnet.py

Co-authored-by: Rahul Tuli <rahul@neuralmagic.com>

* Update tests/sparsezoo/models/test_zoo.py

Co-authored-by: Rahul Tuli <rahul@neuralmagic.com>

* comments

* comments

* .gitignore change

* comments

Co-authored-by: Rahul Tuli <rahul@neuralmagic.com>

--- a/.gitignore
+++ b/.gitignore
@@ -763,3 +763,9 @@ MigrationBackup/
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,python,react,pycharm,emacs,vim,visualstudio,visualstudiocode
 .idea/
+
+# vscode debugger 
+.vscode
+
+# ignore all files with name name scratch
+**/[Ss]cratch*
