Changed layers to nodes. Better prod with Nones. Better shape inference with Nones

--- a/tests/sparsezoo/analysis/bert_pruned_quantized.yaml
+++ b/tests/sparsezoo/analysis/bert_pruned_quantized.yaml
@@ -34,7 +34,7 @@ num_parameters: 108771840
 num_sparse_parameters: 68923743
 num_four_blocks: 27193728
 num_sparse_four_blocks: 16986888
-layers:
+nodes:
 - name: Unsqueeze_0
   op_type: Unsqueeze
   weight_name: null
