reorganized analysis scheme, added update_analysis_tests.py, added tests helper file

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,3 +16,7 @@ use_parentheses = True
 [flake8]
 ignore = E203, E251, E701, W503
 max-line-length = 88
+per-file-ignores =
+    tests/sparsezoo/analysis/test_analysis.py:F811,F401
+    tests/sparsezoo/analysis/utils/test_chart.py:F811,F401
+    tests/sparsezoo/analysis/utils/test_helpers.py:F811,F401
