--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ ensure_newline_before_comments = True
 force_grid_wrap = 0
 include_trailing_comma = True
 known_first_party = sparsezoo,tests
-known_third_party = bs4,requests,packaging,yaml,tqdm,numpy,onnx,pytest,flaky
+known_third_party = bs4,requests,packaging,yaml,tqdm,numpy,onnx,pytest,flaky,pydantic
 sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 
 line_length = 88
@@ -16,3 +16,7 @@ use_parentheses = True
 [flake8]
 ignore = E203, E251, E701, W503
 max-line-length = 88
+per-file-ignores =
+    tests/sparsezoo/analysis/test_analysis.py:F811,F401
+    tests/sparsezoo/analysis/utils/test_chart.py:F811,F401
+    tests/sparsezoo/utils/test_onnx.py:F811,F401
