--- a/.github/workflows/build-nightly.yml
+++ b/.github/workflows/build-nightly.yml
@@ -7,6 +7,7 @@ on:
   #    - 'main'
   #schedule:
   #  - cron: '0 0 * * *'
+   workflow_dispatch:
 jobs:
   build-nightly:
     runs-on: ubuntu-22.04
