--- a/.github/workflows/build-nightly.yml
+++ b/.github/workflows/build-nightly.yml
@@ -1,13 +1,12 @@
 name: build-nightly
 run-name: ${{ github.workflow }} is to create nightly wheel file for pypi
 on:
-  [push]
-  #push:
+  push:
   #  branches:
   #    - 'main'
   #schedule:
   #  - cron: '0 0 * * *'
-   workflow_dispatch:
+  workflow_dispatch:
 jobs:
   build-nightly:
     runs-on: ubuntu-22.04
