--- a/.github/workflows/build-nightly.yml
+++ b/.github/workflows/build-nightly.yml
@@ -30,5 +30,7 @@ jobs:
              make -B build
              deactivate
              ls dist/
+             date +%Y%m%d-%k%M%S | tee log_${GITHUB_REF_NAME}_nightly_${GITHUB_SHA:0:7}
              aws s3 ls s3://nm-github-actions/
              aws s3 cp dist/*nightly*.whl s3://nm-github-actions/sparsezoo/
+             aws s3 cp log_${GITHUB_REF_NAME}_nightly_${GITHUB_SHA:0:7} s3://nm-github-actions/sparsezoo/
