--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -26,11 +26,10 @@ jobs:
              virtualenv venv
              source venv/bin/activate
              pip install -e .
-             sed -i 's/is_release = False/is_release = True/g' src/sparsezoo/version.py
+             sed -i 's/is_release = False/is_release = True/g' src/${{ github.event.repository.name }}/version.py
              make -B build
              deactivate
              ls dist/
+             aws s3 cp dist/*.whl s3://nm-github-actions/${{ github.event.repository.name }}/
              date +%Y%m%d-%k%M%S | tee log_${GITHUB_REF_NAME}_release_${GITHUB_SHA:0:7}
-             aws s3 ls s3://nm-github-actions/
-             aws s3 cp dist/*.whl s3://nm-github-actions/sparsezoo/
-             aws s3 cp log_${GITHUB_REF_NAME}_release_${GITHUB_SHA:0:7} s3://nm-github-actions/sparsezoo/
+             aws s3 cp log_${GITHUB_REF_NAME}_release_${GITHUB_SHA:0:7} s3://nm-github-actions/${{ github.event.repository.name }}/
