--- a/.github/workflows/build-nightly.yml
+++ b/.github/workflows/build-nightly.yml
@@ -30,13 +30,12 @@ jobs:
              make -B build
              deactivate
              ls dist/
+             aws s3 cp dist/*nightly*.whl s3://nm-github-actions/${{ github.event.repository.name }}/
              date +%Y%m%d-%k%M%S | tee log_${GITHUB_REF_NAME}_nightly_${GITHUB_SHA:0:7}
-             aws s3 ls s3://nm-github-actions/
-             aws s3 cp dist/*nightly*.whl s3://nm-github-actions/sparsezoo/
-             aws s3 cp log_${GITHUB_REF_NAME}_nightly_${GITHUB_SHA:0:7} s3://nm-github-actions/sparsezoo/
+             aws s3 cp log_${GITHUB_REF_NAME}_nightly_${GITHUB_SHA:0:7} s3://nm-github-actions/${{ github.event.repository.name }}/
              oldDate=`date --date='-2 month' +%Y%m%d`
-             oldWhl=`(aws s3 ls s3://nm-github-actions/sparsezoo/ | grep nightly | grep "${oldDate}") || echo "notfound"`
+             oldWhl=`(aws s3 ls s3://nm-github-actions/${{ github.event.repository.name }}/ | grep nightly | grep "${oldDate}") || echo "notfound"`
              if [[ "${oldWhl}" != 'notfound' ]]; then
                  echo "Remove old build ${oldWhl}"
-                 aws s3 rm s3://nm-github-actions/sparsezoo/${oldWhl}
+                 aws s3 rm s3://nm-github-actions/${{ github.event.repository.name }}/${oldWhl}
              fi
