add timestamp for release log

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -31,5 +31,6 @@ jobs:
              deactivate
              ls dist/
              aws s3 cp dist/*.whl s3://nm-github-actions/${{ github.event.repository.name }}/
-             date +%Y%m%d-%k%M%S | tee log_${GITHUB_REF_NAME}_release_${GITHUB_SHA:0:7}
+             todaytime=`date +%Y%m%d`
+             date +%Y%m%d-%k%M%S | tee log_${GITHUB_REF_NAME}_release_${todaytime}_${GITHUB_SHA:0:7}
              aws s3 cp log_${GITHUB_REF_NAME}_release_${GITHUB_SHA:0:7} s3://nm-github-actions/${{ github.event.repository.name }}/
