--- a/.github/workflows/build-nightly.yml
+++ b/.github/workflows/build-nightly.yml
@@ -21,23 +21,17 @@ jobs:
       - uses: actions/checkout@v3
       - run: | 
              pwd
-             sudo apt update
              sudo apt-get -y install python3-pip
              pip3 --version
              sudo pip3 install virtualenv
              virtualenv venv
              source venv/bin/activate
              pip install -e .
-
-             #echo "Installing nodejs 16.x"
-             #sudo curl -sL https://deb.nodesource.com/setup_16.x | sudo -E bash -
-             #sudo apt install nodejs
              sudo apt install npm
              echo "node: $(node -v)"
              echo "npm: $(npm -v)"
              echo "Installing testmo cli..."
              sudo npm install -g @testmo/testmo-cli
-
              echo "Build ${{ github.event.repository.name }} Nightly..."
              todaytime=`date +%Y%m%d`
              export TESTMO_TOKEN=${{ secrets.TESTMO_TEST_TOKEN }}
@@ -46,10 +40,14 @@ jobs:
              NAME="${{ github.event.repository.name }} Nightly ${todaytime} ${GITHUB_SHA:0:7}"
              SOURCE="${{ github.event.repository.name }}"
              status=$(make -B build || echo 'FAILED')
+             echo "${{ github.event.repository.name }} build log:"
+             echo "${status}"
              if [[ "${status}" = "FAILED" ]]; then
+                 echo "${{ github.event.repository.name }} build failed"
                  echo "<status>failed</status>" > result.xml
              else
                  echo "<status>success</status>" > result.xml
+                 echo "${{ github.event.repository.name }} build success"
                  echo "Created build: $(ls dist/)"
              fi
              testmo automation:run:submit \
