--- a/.github/workflows/util.yml
+++ b/.github/workflows/util.yml
@@ -30,12 +30,19 @@ jobs:
       id-token: write
       contents: read
     steps:
-      - uses: aws-actions/configure-aws-credentials@v2
+
+      - name: repo checkout
+        uses: actions/checkout@v3
+
+      - name: s3
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: ${{ secrets.AWS_WEBIDENTITY_FOR_GITHUB_ACTIONS }}
           aws-region: us-east-1
-      - uses: actions/checkout@v3
-      - run: |
+
+      - name: build
+        id: build
+        run: |
              pwd
              sudo apt-get -y install python3-pip
              pip3 --version
@@ -59,6 +66,9 @@ jobs:
              fi
              echo "=========== Generated build ==========="
              ls dist/
+             echo "=========== Copy build to S3 ==========="
+             aws s3 list s3://nm-github-actions/${{ github.event.repository.name }}/
+
 
              #aws s3 cp dist/*nightly*.whl s3://nm-github-actions/${{ github.event.repository.name }}/
              #date '+%Y%m%d-%k:%M:%S' | tee log_${GITHUB_REF_NAME}_nightly_${todaytime}_${GITHUB_SHA:0:7}
