--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -2,9 +2,9 @@ name: build-release
 run-name: ${{ github.workflow }} is to create release wheel file for pypi
 on:
   push:
-  #  branches:
-  #    - 'release/[0-9]+.[0-9]+'
-  #  workflow_dispatch:
+    branches:
+      - 'release/[0-9]+.[0-9]+'
+    workflow_dispatch:
 
 jobs:
 
