report exit code

--- a/.github/workflows/util.yml
+++ b/.github/workflows/util.yml
@@ -107,7 +107,8 @@ jobs:
           echo "========== Build info ==========="
           echo "name: ${name}"
           echo "build status: ${{ needs.BUILD.outputs.status }}"
-          echo "GHA job: https://github.com/neuralmagic/${{ github.event.repository.name }}/actions/runs/${{ inputs.run_id }}" | tee result.xml
+          echo "<status>${{ needs.BUILD.outputs.status }}</status>" > result.xml
+          echo "echo \"GHA job ${{ needs.BUILD.outputs.status }}: https://github.com/neuralmagic/${{ github.event.repository.name }}/actions/runs/${{ inputs.run_id }}\"; exit ${exit_code}" > result.sh
           echo "========== Report to testmo ==========="
           echo "testmo automation:run:submit \\"
           echo "  --instance ${TESTMO_URL} \\"
@@ -121,4 +122,4 @@ jobs:
                          --name "${name}" \
                          --source "${{ github.event.repository.name }}" \
                          --results result.xml \
-                         -- cat result.xml
+                         -- bash result.sh
