--- a/.github/workflows/util.yml
+++ b/.github/workflows/util.yml
@@ -108,6 +108,10 @@ jobs:
           echo "name: ${name}"
           echo "build status: ${{ needs.BUILD.outputs.status }}"
           echo "<status>${{ needs.BUILD.outputs.status }}</status>" > result.xml
+          exit_code=1
+          if [[ "${{ needs.BUILD.outputs.status }}" = "success" ]]; then
+              exit_code=0
+          fi
           echo "echo \"GHA job ${{ needs.BUILD.outputs.status }}: https://github.com/neuralmagic/${{ github.event.repository.name }}/actions/runs/${{ inputs.run_id }}\"; exit ${exit_code}" > result.sh
           echo "========== Report to testmo ==========="
           echo "testmo automation:run:submit \\"
