--- a/.github/workflows/util.yml
+++ b/.github/workflows/util.yml
@@ -109,6 +109,8 @@ jobs:
           echo "build status: ${{ needs.BUILD.outputs.status }}"
           exit_code=1
           pwd
+          ls -lt
+          ls -lt .github/workflows/
           if [[ "${{ needs.BUILD.outputs.status }}" = "success" ]]; then
               exit_code=0
               cp .github/workflows/result.xml.success .github/workflows/result.xml
