--- a/.github/workflows/util.yml
+++ b/.github/workflows/util.yml
@@ -87,6 +87,8 @@ jobs:
                      aws s3 rm s3://nm-github-actions/${{ github.event.repository.name }}/${oldwhl}
                  done
              fi
+             echo "Here========"
+             pwd
 
   TESTMO:
     if: success() || failure()
@@ -109,8 +111,8 @@ jobs:
           echo "build status: ${{ needs.BUILD.outputs.status }}"
           exit_code=1
           pwd
-          ls -lt
-          ls -lt .github/workflows/
+          ls -alt
+          ls -alt .github/workflows/
           if [[ "${{ needs.BUILD.outputs.status }}" = "success" ]]; then
               exit_code=0
               cp .github/workflows/result.xml.success .github/workflows/result.xml
