--- a/.github/workflows/util.yml
+++ b/.github/workflows/util.yml
@@ -62,6 +62,7 @@ jobs:
              if [[ "${status}" = "FAILED" ]]; then
                  echo "${{ github.event.repository.name }} build failed"
                  echo "status=failed" >> "$GITHUB_OUTPUT"
+                 cp .github/workflows/result.xml.fail result.xml
                  exit 1
              else
                  echo "${{ github.event.repository.name }} build success"
@@ -76,6 +77,7 @@ jobs:
              else
                  echo "failed: copied to s3://nm-github-actions/${{ github.event.repository.name }}/"
                  echo "status=failed" >> "$GITHUB_OUTPUT"
+                 cp .github/workflows/result.xml.fail result.xml
                  exit 1
              fi
              oldDate=`date --date='-2 month' +%Y%m%d`
@@ -87,10 +89,10 @@ jobs:
                      aws s3 rm s3://nm-github-actions/${{ github.event.repository.name }}/${oldwhl}
                  done
              fi
+             cp .github/workflows/result.xml.success result.xml
              echo "Here========"
              pwd
              ls -alt
-             ls -alt .github/workflows/
 
   TESTMO:
     if: success() || failure()
@@ -114,12 +116,8 @@ jobs:
           exit_code=1
           pwd
           ls -alt
-          ls -alt .github/workflows/
           if [[ "${{ needs.BUILD.outputs.status }}" = "success" ]]; then
               exit_code=0
-              cp .github/workflows/result.xml.success .github/workflows/result.xml
-          else
-              cp .github/workflows/result.xml.fail .github/workflows/result.xml
           fi
           echo "echo \"GHA job ${{ needs.BUILD.outputs.status }}: https://github.com/neuralmagic/${{ github.event.repository.name }}/actions/runs/${{ inputs.run_id }}\"; exit ${exit_code}" > result.sh
           echo "========== Report to testmo ==========="
@@ -128,11 +126,11 @@ jobs:
           echo "  --project-id ${{ inputs.testmo_project_id }} \\"
           echo "  --name ${name} \\"
           echo "  --source ${{ github.event.repository.name }} \\"
-          echo "  --results .github/workflows/result.xml"
+          echo "  --results result.xml"
           testmo automation:run:submit \
                          --instance "${TESTMO_URL}" \
                          --project-id ${{ inputs.testmo_project_id }} \
                          --name "${name}" \
                          --source "${{ github.event.repository.name }}" \
-                         --results .github/workflows/result.xml \
+                         --results result.xml \
                          -- bash result.sh
