--- a/.github/workflows/util.yml
+++ b/.github/workflows/util.yml
@@ -61,11 +61,10 @@ jobs:
              echo "=========== Build status ==========="
              if [[ "${status}" = "FAILED" ]]; then
                  echo "${{ github.event.repository.name }} build failed"
-                 echo "status=failed" >> "$GITHUB_OUTPUT"
-                 cp .github/workflows/result.xml.fail result.xml
-                 exit 1
+                 exitCode=1
              else
                  echo "${{ github.event.repository.name }} build success"
+                 exitCode=0
              fi
              echo "=========== Generated build ==========="
              ls dist/
@@ -73,12 +72,16 @@ jobs:
              aws s3 cp dist/*.whl s3://nm-github-actions/${{ github.event.repository.name }}/
              if [ $? -eq 0 ]; then
                  echo "ok: copied to s3://nm-github-actions/${{ github.event.repository.name }}/"
-                 echo "status=success" >> "$GITHUB_OUTPUT"
              else
                  echo "failed: copied to s3://nm-github-actions/${{ github.event.repository.name }}/"
+                 exitCode=1
+             fi
+             if [ ${exitCode} -eq 1 ]; then
                  echo "status=failed" >> "$GITHUB_OUTPUT"
                  cp .github/workflows/result.xml.fail result.xml
-                 exit 1
+             else
+                 echo "status=success" >> "$GITHUB_OUTPUT"
+                 cp .github/workflows/result.xml.success result.xml
              fi
              oldDate=`date --date='-2 month' +%Y%m%d`
              oldWhl=`(aws s3 ls s3://nm-github-actions/${{ github.event.repository.name }}/ | grep nightly | grep "${oldDate}") || echo "notfound"`
@@ -89,45 +92,27 @@ jobs:
                      aws s3 rm s3://nm-github-actions/${{ github.event.repository.name }}/${oldwhl}
                  done
              fi
-             cp .github/workflows/result.xml.success result.xml
-             echo "Here========"
-             pwd
-             ls -alt
-
-  TESTMO:
-    if: success() || failure()
-    needs: BUILD
-    runs-on: ${{ inputs.runs_on }}
-    steps:
-
-      - id: report
-        run: |
-          echo "node: $(node -v)"
-          echo "npm: $(npm -v)"
-          echo "Installing testmo cli..."
-          sudo npm install -g @testmo/testmo-cli    
-          export TESTMO_TOKEN=${{ secrets.TESTMO_TEST_TOKEN }}
-          TESTMO_URL="https://neuralmagic.testmo.net"
-          todaytime=`date +%Y%m%d`
-          name="${{ github.event.repository.name }} ${{ inputs.build_type }} ${todaytime} ${{ needs.BUILD.outputs.commitid }} RunID:${{ inputs.run_id }}"
-          echo "========== Build info ==========="
-          echo "name: ${name}"
-          echo "build status: ${{ needs.BUILD.outputs.status }}"
-          exit_code=1
-          pwd
-          ls -alt
-          if [[ "${{ needs.BUILD.outputs.status }}" = "success" ]]; then
-              exit_code=0
-          fi
-          echo "echo \"GHA job ${{ needs.BUILD.outputs.status }}: https://github.com/neuralmagic/${{ github.event.repository.name }}/actions/runs/${{ inputs.run_id }}\"; exit ${exit_code}" > result.sh
-          echo "========== Report to testmo ==========="
-          echo "testmo automation:run:submit \\"
-          echo "  --instance ${TESTMO_URL} \\"
-          echo "  --project-id ${{ inputs.testmo_project_id }} \\"
-          echo "  --name ${name} \\"
-          echo "  --source ${{ github.event.repository.name }} \\"
-          echo "  --results result.xml"
-          testmo automation:run:submit \
+             # TESTMO
+             echo "node: $(node -v)"
+             echo "npm: $(npm -v)"
+             echo "Installing testmo cli..."
+             sudo npm install -g @testmo/testmo-cli
+             export TESTMO_TOKEN=${{ secrets.TESTMO_TEST_TOKEN }}
+             TESTMO_URL="https://neuralmagic.testmo.net"
+             todaytime=`date +%Y%m%d`
+             name="${{ github.event.repository.name }} ${{ inputs.build_type }} ${todaytime} ${GITHUB_SHA:0:7} RunID:${{ inputs.run_id }}"
+             echo "========== Build info ==========="
+             echo "name: ${name}"
+             echo "build: $GITHUB_OUTPUT"
+             echo "echo \"GHA job $GITHUB_OUTPUT: https://github.com/neuralmagic/${{ github.event.repository.name }}/actions/runs/${{ inputs.run_id }}\"; exit ${exitCode}" > result.sh
+             echo "========== Report to testmo ==========="
+             echo "testmo automation:run:submit \\"
+             echo "  --instance ${TESTMO_URL} \\"
+             echo "  --project-id ${{ inputs.testmo_project_id }} \\"
+             echo "  --name ${name} \\"
+             echo "  --source ${{ github.event.repository.name }} \\"
+             echo "  --results result.xml"
+             testmo automation:run:submit \
                          --instance "${TESTMO_URL}" \
                          --project-id ${{ inputs.testmo_project_id }} \
                          --name "${name}" \
