--- a/.github/workflows/echo.yaml
+++ b/.github/workflows/echo.yaml
@@ -16,4 +16,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Use Echo Action from repo1
-        uses: neuralmagic/nmstore/actions/common/test
+        uses: neuralmagic/nmstore/actions/common/test@pilot
