--- a/.github/workflows/echo.yaml
+++ b/.github/workflows/echo.yaml
@@ -14,5 +14,5 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Use Echo Action from repo1
-        uses: neuralmagic/nmstore/actions/demo@pilot
+      - name: Use Echo Action from nmstore
+        uses: neuralmagic/nmstore/common/test@pilot
