--- a/.github/workflows/build-nmstore.yml
+++ b/.github/workflows/build-nmstore.yml
@@ -11,3 +11,4 @@ jobs:
         uses: actions/checkout@v2
       - name: Build PyPi wheel
         uses: neuralmagic/nmstore/actions/pypi@pypi-test
+        run: echo ${{build.outputs.status}}
