--- a/.github/workflows/build-nmstore.yml
+++ b/.github/workflows/build-nmstore.yml
@@ -9,5 +9,5 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: build
+      - name: Build PyPi Wheel
         uses: neuralmagic/nmstore/actions/pypi@pypi-test
