--- a/.github/workflows/build-nmstore.yml
+++ b/.github/workflows/build-nmstore.yml
@@ -18,7 +18,15 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Check commit id and wheel
+      - name: Echo filename
         run:  |
               echo "${{ needs.build.outputs.filename }}"
-              echo "hello world"
+      - name: s3
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: ${{ secrets.AWS_WEBIDENTITY_FOR_GITHUB_ACTIONS }}
+          aws-region: us-east-1
+      - name: Push to s3
+        uses: neuralmagic/nmstore/actions/s3@pypi-test
+        with:
+          filename: dist/*.whl
